[project]
name = "fault-env"
version = "0.1.0"
description = "Advanced OpenEnv fault diagnosis environment"
authors = [
    { name = "Jaswanth" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"